# ameko

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  install-script.cmake  variables.cmake
source/: lib.cpp  main.cpp
source/ameko/: game.cpp  game.hpp
source/ameko/clocks/: clock.hpp  std_clock.hpp
source/ameko/config/: global_config.cpp  global_config.hpp  inheritable.hpp
source/ameko/config/serialization/: serialization_context.hpp  serialize_value.cpp  serialize_value.hpp  serializer.hpp  toml_serializer.cpp  toml_serializer.hpp
source/ameko/dependencies/: gl.hpp  glad.hpp  glfw.hpp
source/ameko/display/: display.cpp  display.hpp  display_backend.hpp  display_config.hpp
source/ameko/display/backends/dummy/: dummy_display.cpp  dummy_display.hpp
source/ameko/display/backends/glfw/: glfw_context.cpp  glfw_context.hpp  glfw_display.cpp  glfw_display.hpp  glfw_display_internal.cpp  glfw_display_internal.hpp
source/ameko/executor/: executor.cpp  executor.hpp  executor_config.hpp  executor_mode.hpp
source/ameko/executor/loops/: audio_loop.cpp  audio_loop.hpp  event_loop.cpp  event_loop.hpp  loop.hpp  render_loop.cpp  render_loop.hpp  update_loop.cpp  update_loop.hpp
source/ameko/executor/sync/: of_sync.cpp  of_sync.hpp  sync.hpp
source/ameko/executor/threads/: blocking_queue.hpp  thread.cpp  thread.hpp
source/ameko/graphics/: graphics_backend.hpp  graphics_config.hpp  graphics_context.hpp
source/ameko/graphics/backends/dummy/: dummy_graphics_context.cpp  dummy_graphics_context.hpp
source/ameko/graphics/backends/gl/: gl_context.cpp  gl_context.hpp
source/ameko/input/: callbacks.hpp  events.hpp  input_context.hpp
source/ameko/input/backends/dummy/: dummy_input_context.cpp  dummy_input_context.hpp
source/ameko/input/backends/glfw/: glfw_input_context.cpp  glfw_input_context.hpp
source/ameko/logging/: log.cpp  log.hpp  log_context.hpp  logging_config.hpp
source/ameko/utils/: bitfield.hpp  enum.hpp  math.hpp  optional.hpp  rect.hpp  type_traits.hpp
test/: CMakeLists.txt
test/source/: ameko_test.cpp
test/source/config/: toml.cpp
